frontend/test/should_fail/pattern_004.grg
pattern Foo() modify(-a:Edge->)
{
	:Node;
	
	modify {
	}
}

rule r {
	. -a:Edge-> .; 
	foo:Foo();
	modify {
		foo(a);
	}
}